# convcom

./: Cargo.toml  INSTALLATION.md  LICENSE  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
scripts/: check-latest.sh
src/: error.rs  lib.rs  main.rs
src/config/: settings.rs
src/models/: ai.rs  mod.rs  providers.rs
src/prompt/: builder.rs
src/services/: ai_service.rs  git_service.rs  mod.rs  providers.rs
templates/: commit_template.txt
